# ManimVideos

./: pyproject.toml  uitleg.txt
src/3blue1brown/: cosmic_demo.py  cosmic_inflation_intro.py  cosmic_inflation_intro2.py  griddie.py  inflation_compare.py  inflation_size.py  inflation_timeline.py  manim_showcase.py  math.py  zoom_ladder.py
src/3blue1brown/media/Tex/: 04a953e701ac5fd5.tex  5689b32599fb5371.tex  784f211ab66b434b.tex  7d548ce026ad0035.tex  8eb7bfe860a2b4d5.tex  9aeadf9db296aa82.tex  a4a025ec8d608eda.tex  abbb26e32cd12bc8.tex  b8fe0acc31e3dd72.tex  bda6266bcd0f8c1b.tex  d8ac2541255f93b7.tex  d8ac8c3975a5f161.tex  d96dda389e895e73.tex  e3f2c549e7f4297c.tex
src/3blue1brown/media/videos/cosmic_demo/2160p60/partial_movie_files/ExpandingGrid/: partial_movie_file_list.txt
src/3blue1brown/media/videos/cosmic_demo/2160p60/partial_movie_files/ScaleFactorPlot/: partial_movie_file_list.txt
src/3blue1brown/media/videos/cosmic_inflation_intro/2160p60/partial_movie_files/InflationGridIntro/: partial_movie_file_list.txt
src/3blue1brown/media/videos/cosmic_inflation_intro2/2160p60/partial_movie_files/InflationGridIntro2/: partial_movie_file_list.txt
src/3blue1brown/media/videos/griddie/1080p60/partial_movie_files/ExpandingGrid/: partial_movie_file_list.txt
src/3blue1brown/media/videos/inflation_compare/1080p60/partial_movie_files/ScaleComparisons_NoTex/: partial_movie_file_list.txt
src/3blue1brown/media/videos/inflation_scale_grid/1080p60/partial_movie_files/InflationScaleGrid_NoStars/: partial_movie_file_list.txt
(+9 files in other folders)
