[project]
name = "3blue1brwon"
version = "0.1.0"
description = ""
authors = [
    {name = "lisan",email = "lisan@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "manim (>=0.19.0,<0.20.0)"
]

[tool.poetry]
packages = [{include = "3blue1brwon", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
